--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h3>
-<a id="welcome to GitHub Pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="HTML images" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 
 
@@ -39,8 +39,10 @@
 </code></pre>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
+<a id="Java images" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code>
+<img src = "https://raw.githubusercontent.com/hyunj0525/hyunj0525.github.io/3fa27e1d99f4da40e5be484e2a761958e805f720/images/java.PNG">
+</code></pre>
 
 
         </section>
