--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <img src = "https://cloud.githubusercontent.com/assets/11438919/7194262/b09c1366-e4e6-11e4-8b40-3fc9f6546712.PNG">
 </code></pre>
 
+<h2>PHP images</h2>
 <a id="PHP images" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PHP images</h3>
 <pre><code>
 <img src = "https://cloud.githubusercontent.com/assets/11438919/7194264/b0be3e14-e4e6-11e4-89bf-915494437a87.PNG">
